# felis

./: .gitignore  .readthedocs.yaml  FUNCTIONAL_STYLE.md  PERFORMANCE_IMPROVEMENTS.md  README.md  pyproject.toml  quartz.config.ts  quartz.layout.ts
.github/: dependabot.yaml
.github/workflows/: build-preview.yaml  ci.yaml  deploy.yaml  docker-build-push.yaml  release.yaml
content/: index.md
docs/: quartz.config.ts  quartz.layout.ts
docs/content/: index.md
felis/: __init__.py  coroutine.py  coroutine_option.py  currying.py  either.py  environment.py  identity.py  lazy.py  list.py  monad.py  option.py  reverse_state.py  reversed_state.py  state.py
src/felis/: __init__.py  alternative.py  applicative.py  bool.py  coroutine.py  coroutine_option.py  currying.py  dict.py  either.py  either_t.py  equal.py  float.py  free.py  free_dict.py  free_t.py  function.py  function_option.py  functor.py  identity.py  io.py  iterable.py  lazy.py  lazy_coroutine.py  lazy_coroutine_either.py  lazy_coroutine_either_list.py  lazy_coroutine_option.py  lazy_t.py  list.py  list_t.py  monad.py  monoid.py  option.py  option_t.py  order.py  ordering.py  pair.py  parser.py  predicate.py  semigroup.py  state.py  (+3 more)
src/felis/constrained/: float.py  int.py  str.py
src/felis/function/: __init__.py  flip_.py  identity_.py  pure_.py
src/felis/predicate/: __init__.py  bool.py  comparison.py  float.py  interval.py
src/felis/type/: __init__.py  float.py  int.py  str.py
src/felis_catus.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_bool.py  test_performance.py
