[project]
name = "felis"
description = "Felis Catus"
readme = "README.md"
requires-python = ">=3.12"
license = "0BSD"
authors = [{ name = "LeeeeT", email = "me@LeeeeT.dev" }]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Zero-Clause BSD (0BSD)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/LeeeeT/felis"
Documentation = "https://felis.rtfd.io"
Repository = "https://github.com/LeeeeT/felis"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "felis/__init__.py"

[tool.ruff]
line-length = 160
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["A", "ARG", "D"]

[tool.pyright]
pythonVersion = "3.12"
include = ["felis"]
typeCheckingMode = "strict"
